--- a/OurStory.html
+++ b/OurStory.html
@@ -89,13 +89,13 @@
         <a href="OurTeam.html">Our Team</a> |
         <a href="OurFilms.html">Our Films</a> |
         <a href="OurGoals.html">Our Goals</a> |
-        <a href="OurFeature.html">Our Feature</a>
+        <a href="BodyCount.html">Our Feature</a>
     </nav>
 </header>
 
 <!-- Main Content -->
 <main class="intro">
-    <h1 class="red-heading fade-in">Our Story</h1>
+    <h1 class="red-heading">Our Story</h1>
 
     <section class="story-section">
 
