--- a/BodyCount.html
+++ b/BodyCount.html
@@ -6,6 +6,7 @@
   <title>Body Count - One Shot Entertainment</title>
   <link rel="icon" href="One Shot Logo Formatted.png"/>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -30,17 +31,17 @@
       justify-content: space-between;
       align-items: center;
       background: #0a0a0a;
-      padding: 1rem 2rem;
+      padding: 1rem 1.5rem;
       border-bottom: 2px solid #e50914;
       z-index: 1000;
       box-shadow: 0 4px 20px rgba(229,9,20,0.3);
     }
-    .logo-img { height: 60px; cursor: pointer; display: block; }
+    .logo-img { height: 50px; cursor: pointer; display: block; }
     .nav-links a {
       color: #e50914;
       text-decoration: none;
-      /*margin: 0 0.5rem;*/
-      /*font-weight: 700;*/
+      margin: 0 0.5rem;
+      font-weight: 700;
       transition: color 0.3s ease;
     }
     .nav-links a:hover {
@@ -222,9 +223,7 @@
   <div class="logo" onclick="location.href='index.html'">
     <img src="One Shot Logo Formatted.png" alt="One Shot Logo" class="logo-img">
   </div>
-
   <button class="menu-toggle" id="menu-toggle">☰</button>
-
   <nav class="nav-links" id="nav-links">
     <a href="OurStory.html">Our Story</a> |
     <a href="OurTeam.html">Our Team</a> |
