--- a/Nightfall.html
+++ b/Nightfall.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles.css"/>
   <link rel="icon" href="One Shot Logo Formatted.png"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
@@ -113,7 +114,7 @@
     <a href="OurTeam.html">Our Team</a> |
     <a href="OurFilms.html">Our Films</a> |
     <a href="OurGoals.html">Our Goals</a> |
-    <a href="OurFeature.html">Our Feature</a>
+    <a href="BodyCount.html">Our Feature</a>
   </nav>
 </header>
 
