--- a/OurFilms.html
+++ b/OurFilms.html
@@ -30,18 +30,18 @@
         .films-wrapper {
             display: flex;
             justify-content: center;
-            margin: 3rem auto;
-            padding: 0 1rem;
+            width: 100%;
         }
 
         .films-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
             gap: 1.5rem;
-            justify-content: center;
+            justify-items: center;
             max-width: 1100px;
             width: 100%;
         }
+
 
         .film-card {
             cursor: pointer;
@@ -83,13 +83,13 @@
         <a href="OurTeam.html">Our Team</a> |
         <a href="OurFilms.html">Our Films</a> |
         <a href="OurGoals.html">Our Goals</a> |
-        <a href="OurFeature.html">Our Feature</a>
+        <a href="BodyCount.html">Our Feature</a>
     </nav>
 </header>
 
 <!-- Main Content -->
 <main class="intro">
-    <h1 class="red-heading fade-in">Our Films</h1>
+    <h1 class="red-heading">Our Films</h1>
 
     <div class="films-wrapper fade-in">
         <section class="films-grid">
