--- a/OurGoals.html
+++ b/OurGoals.html
@@ -64,7 +64,7 @@
         <a href="OurTeam.html">Our Team</a> |
         <a href="OurFilms.html">Our Films</a> |
         <a href="OurGoals.html">Our Goals</a> |
-        <a href="OurFeature.html">Our Feature</a>
+        <a href="BodyCount.html">Our Feature</a>
     </nav>
 </header>
 
