--- a/OurTeam.html
+++ b/OurTeam.html
@@ -77,18 +77,18 @@
     <a href="OurTeam.html">Our Team</a> |
     <a href="OurFilms.html">Our Films</a> |
     <a href="OurGoals.html">Our Goals</a> |
-    <a href="OurFeature.html">Our Feature</a>
+    <a href="BodyCount.html">Our Feature</a>
   </nav>
 </header>
 
 <main class="intro">
-  <h1 class="red-heading fade-in">Our Team</h1>
+  <h1 class="red-heading">Our Team</h1>
 
   <section class="team-section fade-in">
     <img src="KIERAN%20SHERRY.jpg" alt="Kieran Sherry" class="team-image">
     <div class="team-text">
       <div class="team-name">Kieran Sherry</div>
-      <p>Tall and cocky, yet sensitive and caring. A horror fanatic obsessed with bringing his exact visions to life. The biggest Star Wars fan this side of the Outer Rim and an avid Gravity Falls impressionist. A talented writer, director, and actor honing his craft at Ithaca College (but mostly on film sets with his friends). One Shot's creative engine and the writer/director of our first feature film.</p>
+      <p><strong>KIERAN SHERRY (21):</strong> Tall and cocky, yet sensitive and caring. A horror fanatic obsessed with bringing his exact visions to life. The biggest Star Wars fan this side of the Outer Rim and an avid Gravity Falls impressionist. A talented writer, director, and actor honing his craft at Ithaca College (but mostly on film sets with his friends). One Shot's creative engine and the writer/director of our first feature film.</p>
     </div>
   </section>
 
@@ -96,7 +96,7 @@
     <img src="JAKE%20RUDERMAN.JPG" alt="Jake Ruderman" class="team-image">
     <div class="team-text">
       <div class="team-name">Jake Ruderman</div>
-      <p>Short, with curly hair and a stache that’s got a mind of its own. A sharp, funny, and always curious mind who chose to study the world rather than only film, diving into politics, management, and everything in between. The brains of One Shot and its voice of reason, applying his expansive range of knowledge to filmmaking as the producer who keeps things from spiraling. Blends business with a love for storytelling, a perfect mix of realism and artistic integrity.</p>
+      <p><strong>JAKE RUDERMAN (21):</strong> Short, with curly hair and a stache that’s got a mind of its own. A sharp, funny, and always curious mind who chose to study the world rather than only film, diving into politics, management, and everything in between. The brains of One Shot and its voice of reason, applying his expansive range of knowledge to filmmaking as the producer who keeps things from spiraling. Blends business with a love for storytelling, a perfect mix of realism and artistic integrity.</p>
     </div>
   </section>
 
@@ -104,7 +104,7 @@
     <img src="DANIEL%20IRWIN.JPG" alt="Daniel Irwin" class="team-image">
     <div class="team-text">
       <div class="team-name">Daniel Lloyd Irwin</div>
-      <p>Messy-haired, unassuming, the nicest guy in every room, incredibly perceptive, with a memory like a synthetic, especially when it comes to anything Lego Ninjago. An incredibly apt writer of character and emotion, with a taste for the ultra-complex, Nolan-esque tales of reality-bending and time travel. Also honing his writing and acting crafts at Ithaca College, both in the classroom and on set. The glue that holds One Shot together in every possible way and the star of our festival-accepted short film <strong>Dead and Buried.</strong></p>
+      <p><strong>DANIEL LLOYD IRWIN (22):</strong> Messy-haired, unassuming, the nicest guy in every room, incredibly perceptive, with a memory like a synthetic, especially when it comes to anything Lego Ninjago. An incredibly apt writer of character and emotion, with a taste for the ultra-complex, Nolan-esque tales of reality-bending and time travel. Also honing his writing and acting crafts at Ithaca College, both in the classroom and on set. The glue that holds One Shot together in every possible way and the star of our festival-accepted short film <em>Dead and Buried.</em></p>
     </div>
   </section>
 </main>
