--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <main class="intro">
     <h1 id="typing-title"></h1>
     <p class="intro-blurb">
-        A production company by young, aspiring, indie filmmakers for young, aspiring, indie filmmakers. Putting emphasis on community and character explorations above cold hard cash. <br>Join our team today and give us a <em>shot!</em>
+        A production company <em><strong>by</strong></em> young, aspiring, indie filmmakers <em><strong>for</em></strong> young, aspiring, indie filmmakers. Putting emphasis on community and character explorations above cold hard cash. <br>Join our team today and give us a <em>shot!</em>
     </p>
 
     <div class="group-photo">
