--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="OurTeam.html">Our Team</a> |
         <a href="OurFilms.html">Our Films</a> |
         <a href="OurGoals.html">Our Goals</a> |
-        <a href="OurFeature.html">Our Feature</a>
+        <a href="BodyCount.html">Our Feature</a>
     </nav>
 </header>
 
