--- a/OurStory.html
+++ b/OurStory.html
@@ -101,31 +101,75 @@
 
         <div class="story-block fade-in">
             <div class="story-text">
-                <p>From our very first days as friends back in kindergarten, the three of us have been telling stories. As inaugural members of the ‘Haunted House Club’, we chased ghosts during recess, passed on terrifying tales, and uncovered the secrets of the school basement. On the battlefield (or backyard), we partook in hours-long epics, inspired by our favorite superheroes, Jedi, and Transformers, with unrelenting zombies and evil little siblings proving mighty opponents. Our weekends were filled with the likes of DreamWorks, Pixar, Cartoon Network, and Disney, all of which fueled our wild imaginations with creative inspiration. </p>
+                <p><strong>EXT. SCHOOL PLAYGROUND - DAY. </strong><br><br>A group of 5-year-old boys sneak around a school playground chasing ghosts and looking for monsters. <strong>The Haunted House Club</strong> is their first collective taste of letting their imaginations run wild.</p>
             </div>
             <img src="kindergarten.jpg" alt="Kindergarten Days" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
             <div class="story-text">
-                <p>By middle school, we had upgraded to a professional production company and had brought to life a series of short films, like our debut, “Transformers are Real,” the perpetually underrated “Paradox,” and the dramatic saga, “The Mystery of Mineral,” parts one and two. With a small but mighty YouTube following, and with the help of some incredibly devoted parents, our middle school days were spent writing and shooting anything our brains could cook up. We tried our hand at a comedic buddy cop romp, a time-traveling epic, a dramatic mini-franchise of our own, and a meta, genre-switching exploration of cinema history. Our hard work paid off in a big way when our film “Pick Again” was awarded ‘Best High School Student Film,’ beating out dozens of high-school age competitors while we were only in eighth grade. </p>
+                <p><strong>EXT. FIELD - DAY.</strong> <br><br>A group of 8-year-old boys convince one of their dads to film their epic, three-hour-long, zombie/Star Wars/Transformers/Ninjago/superhero battle on his camcorder. They'll watch it back at sleepovers for months and pretend it's a real movie.</p>
             </div>
             <img src="middle.jpg" alt="Middle School Projects" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
             <div class="story-text">
-                <p>As we garnered more and more experience, our quality began to improve. We started focusing on the truly important stuff, like conveying emotions through dialogue and really telling a story through film, instead of just cool concepts and fun settings. At sleepovers, we watched horror movie after horror movie, marveling at each one that was able to totally terrify us, and trying to understand how, exactly, it had. Movies like Sinister and Hereditary left us shells of ourselves—and we loved it! Horror games like Resident Evil and Until Dawn enthralled us with their seamless blend of jump-scares and hair-raising reveals. Unsurprisingly, our friend group fell in love with physically going to the movies, which became a near-weekly occasion. Our trips to the cinema coincided with the peak of Marvel’s Cinematic Universe, brand-new Star Wars films, and the impossible-to-look-away-from DC Extended Universe. We came to realize that money didn’t make a movie great—its heart and soul did.</p>
+                <p><strong>INT. MOVIE THEATER - NIGHT. </strong> <br><br>A group of 11-year-old boys sit in awe as the Avengers fight against Ultron in Sokovia. Light radiates from the giant screen, music blares over the speakers, and the clashing sounds of the fight boom all around them. They are absolutely entranced.</p>
             </div>
             <img src="beach.jpg" alt="Filmmaking Growth" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
             <div class="story-text">
-                <p>As we ventured through high school, we pioneered a film club, where all students were invited to join us in learning everything we could about filmmaking, storytelling, and the challenges of translating an idea from script to screen. While it wasn’t always easy to work with newcomers, learning to collaborate with people outside of our circle was vital in our growth as creatives. </p>
+                <p><strong>INT. HALLWAY - DAY. </strong> <br><br>A camera-mounted dolly rolls its way down a hallway as a group of 12-year-old boys shoot one of their first short films. <strong>Bad Cop, Worse Cop</strong> is the first time they start to experiment with fun camera movements and creative shots.</p>
             </div>
             <img src="club.png" alt="Film Club" class="story-image"/>
         </div>
+
+        <div class="story-block fade-in">
+            <div class="story-text">
+                <p><strong>INT. AUDITORIUM - DAY. </strong> <br><br>As eighth-graders, two of the boys accept the "Best High School Student Film" award at the Lighthouse International Film Festival. The award recognizes their short film <strong>Pick Again</strong>, a meta, genre-switching exploration of cinema. This is the group's first taste of recognition for their work--and it feels incredible.</p>
+            </div>
+            <img src="club.png" alt="Film Club" class="story-image"/>
+        </div>
+
+        <div class="story-block fade-in">
+            <div class="story-text">
+                <p><strong>INT. EVAN'S BASEMENT - NIGHT. </strong> <br><br>The group watches horror movie after horror movie at a sleepover, unable to look away from the terrors on screen. They become obsessed with trying to replicate the intense feelings that movies elicit. Their scripts start to get more inspired and nuanced as the group works together, pooling their movie knowledge to improve each other's work.</p>
+            </div>
+            <img src="club.png" alt="Film Club" class="story-image"/>
+        </div>
+
+        <div class="story-block fade-in">
+            <div class="story-text">
+                <p><strong>INT. SCHOOL HALLWAY - DAY. </strong> <br><br>The group, along with their high school's film club, gets their first taste of real struggles on their short film Lockdown. Turns out that working with other people can be a real challenge, but that bridging divides and achieving collaboration are truly essential to success.</p>
+            </div>
+            <img src="club.png" alt="Film Club" class="story-image"/>
+        </div>
+
+        <div class="story-block fade-in">
+            <div class="story-text">
+                <p><strong>INT. SCIENCE CLASSROOM - DAY. </strong> <br><br>The pandemic forces the group to explore alternative methods for their projects. They stumble upon the wonders of the 3D printer and unlock a whole new world of set and costume design in their Star Wars scene <strong>Waiting for Grogu</strong>.</p>
+            </div>
+            <img src="club.png" alt="Film Club" class="story-image"/>
+        </div>
+
+        <div class="story-block fade-in">
+            <div class="story-text">
+                <p><strong>EXT. FOREST - NIGHT. </strong> <br><br>Now in college, the group has continued to come up with new and creative ideas to bring their movie-making dreams to life. Shooting on location, in a forest, digging a real ditch, at night, is the latest crazy idea they've cooked up; until it's topped by their homemade practical cannibalism effects.</p>
+            </div>
+            <img src="club.png" alt="Film Club" class="story-image"/>
+        </div>
+
+        <div class="story-block fade-in">
+            <div class="story-text">
+                <p><strong>INT. LIVING ROOM - DAY. </strong> <br><br>And now we're all caught up! You're probably sitting in your living room reading through this timeline wondering why you haven't closed the page yet. But just know that you're catching us <strong>early</strong> in our journey. So get on board now while we're just getting started. We've got big things coming down the pipeline and we can't wait to share them with you!</p>
+            </div>
+            <img src="club.png" alt="Film Club" class="story-image"/>
+        </div>
+
+
 
     </section>
 </main>
