--- a/TheBoys.html
+++ b/TheBoys.html
@@ -109,10 +109,10 @@
     </div>
     <button class="menu-toggle" id="menu-toggle">☰</button>
     <nav class="nav-links" id="nav-links">
-        <a href="OurStory.html">Our Story</a> |
-        <a href="OurTeam.html">Our Team</a> |
-        <a href="OurFilms.html">Our Films</a> |
-        <a href="OurGoals.html">Our Goals</a> |
+        <a href="OurStory.html">Our Story</a> <span class="divider">|</span>
+        <a href="OurTeam.html">Our Team</a> <span class="divider">|</span>
+        <a href="OurFilms.html">Our Films</a> <span class="divider">|</span>
+        <a href="OurGoals.html">Our Goals</a> <span class="divider">|</span>
         <a href="BodyCount.html">Our Feature</a>
     </nav>
 </header>
@@ -122,7 +122,7 @@
         <img src="TB.png" alt="The Boys Poster">
         <div class="film-info">
             <h1>The Boys: Advanced Vought Production</h1>
-            <a href="https://www.youtube.com/@oneshotentertainment00" class="play-text">Play</a>
+            <a href="https://www.youtube.com/watch?v=j3QEpoqVWF0&t=31s" class="play-text">Play</a>
             <div class="metadata">2025 &bull; 11m &bull; <strong>R</strong> Sequences of violence, language</div>
             <div class="metadata">Directed by Kieran Sherry</div>
             <div class="description">A satirical look at student filmmaking through the lens of the Amazon Prime series The Boys.</div>
