--- a/index.html
+++ b/index.html
@@ -17,13 +17,15 @@
         <img src="One Shot Logo Formatted.png" alt="One Shot Logo" class="logo-img">
     </div>
 
-    <!-- Hamburger -->
+    <!-- Hamburger Button -->
     <button id="menu-toggle" class="menu-toggle">☰</button>
+
+    <!-- Navigation Links -->
     <nav class="nav-links" id="nav-links">
-        <a href="OurStory.html">Our Story</a> |
-        <a href="OurTeam.html">Our Team</a> |
-        <a href="OurFilms.html">Our Films</a> |
-        <a href="OurGoals.html">Our Goals</a> |
+        <a href="OurStory.html">Our Story</a> <span class="divider">|</span>
+        <a href="OurTeam.html">Our Team</a> <span class="divider">|</span>
+        <a href="OurFilms.html">Our Films</a> <span class="divider">|</span>
+        <a href="OurGoals.html">Our Goals</a> <span class="divider">|</span>
         <a href="BodyCount.html">Our Feature</a>
     </nav>
 </header>
