--- a/BodyCount.html
+++ b/BodyCount.html
@@ -6,7 +6,6 @@
   <title>Body Count - One Shot Entertainment</title>
   <link rel="icon" href="One Shot Logo Formatted.png"/>
   <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -206,15 +205,55 @@
     }
 
     /* Responsive */
-    @media (max-width: 768px) {
-      .menu-toggle { display: block; }
-      .nav-links { display: none; flex-direction: column; background: #000; width: 100%; text-align: center; padding: 1rem 0; }
-      .nav-links.show { display: flex; }
-      h1 { font-size: 2.3rem; }
-      .content { width: 94%; font-size: 1rem; }
-      .form-container iframe { height: 1200px; }
-      .video-wrapper { max-width: 95%; }
+    @media (max-width: 600px) {
+
+      .divider {
+        display: none;
+      }
+
+      #typing-title {
+        font-size: 1.69rem;
+      }
+
+      .nav-links a {
+        font-size: 0.76rem;
+      }
+
+      .logo {
+        font-size: 0.97rem;
+      }
+
+      .menu-toggle {
+        font-size: 1.5rem;
+      }
+
+      .menu-toggle {
+        display: block;        /* Show the hamburger */
+      }
+
+      .nav-links {
+        position: absolute;
+        top: 70px;             /* just below navbar */
+        right: 0;
+        background: #000;
+        width: 200px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0;
+        padding: 1rem;
+        display: none;         /* hidden by default */
+      }
+
+      .nav-links.show {
+        display: flex;         /* show when toggled */
+      }
+
+      .nav-links a {
+        padding: 0.5rem 0;
+        width: 100%;
+      }
     }
+
   </style>
 </head>
 <body>
@@ -225,10 +264,10 @@
   </div>
   <button class="menu-toggle" id="menu-toggle">☰</button>
   <nav class="nav-links" id="nav-links">
-    <a href="OurStory.html">Our Story</a> |
-    <a href="OurTeam.html">Our Team</a> |
-    <a href="OurFilms.html">Our Films</a> |
-    <a href="OurGoals.html">Our Goals</a> |
+    <a href="OurStory.html">Our Story</a> <span class="divider">|</span>
+    <a href="OurTeam.html">Our Team</a> <span class="divider">|</span>
+    <a href="OurFilms.html">Our Films</a> <span class="divider">|</span>
+    <a href="OurGoals.html">Our Goals</a> <span class="divider">|</span>
     <a href="BodyCount.html">Our Feature</a>
   </nav>
 </header>
@@ -286,10 +325,25 @@
   document.addEventListener("DOMContentLoaded", () => {
     const menuToggle = document.getElementById("menu-toggle");
     const navLinks = document.getElementById("nav-links");
+
     menuToggle.addEventListener("click", () => {
       navLinks.classList.toggle("show");
     });
+
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("visible");
+          observer.unobserve(entry.target);
+        }
+      });
+    }, { threshold: 0.1 });
+
+    document.querySelectorAll('.fade-in').forEach(el => {
+      observer.observe(el);
+    });
   });
 </script>
+
 </body>
 </html>
