--- a/OurFilms.html
+++ b/OurFilms.html
@@ -79,10 +79,10 @@
     </div>
     <button class="menu-toggle" id="menu-toggle">☰</button>
     <nav class="nav-links" id="nav-links">
-        <a href="OurStory.html">Our Story</a> |
-        <a href="OurTeam.html">Our Team</a> |
-        <a href="OurFilms.html">Our Films</a> |
-        <a href="OurGoals.html">Our Goals</a> |
+        <a href="OurStory.html">Our Story</a> <span class="divider">|</span>
+        <a href="OurTeam.html">Our Team</a> <span class="divider">|</span>
+        <a href="OurFilms.html">Our Films</a> <span class="divider">|</span>
+        <a href="OurGoals.html">Our Goals</a> <span class="divider">|</span>
         <a href="BodyCount.html">Our Feature</a>
     </nav>
 </header>
