--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <main class="intro">
     <h1 id="typing-title"></h1>
     <p class="intro-blurb">
-        A production company <em><strong>by</strong></em> young, aspiring, indie filmmakers <em><strong>for</em></strong> young, aspiring, indie filmmakers. Putting emphasis on community and character explorations above cold hard cash. <br>Join our team today and give us a <strong><em>shot!</em></strong>
+        A production company <em><strong>by</strong></em> young, aspiring, indie filmmakers <em><strong>for</strong></em> young, aspiring, indie filmmakers. Putting emphasis on community and character explorations above cold hard cash. <br>Join our team today and give us a <strong><em>shot!</em></strong>
     </p>
 
     <div class="group-photo">
