--- a/BodyCount.html
+++ b/BodyCount.html
@@ -260,6 +260,32 @@
       }
     }
 
+    /* Responsive Title Fix */
+    @media (max-width: 900px) {
+      h1 {
+        font-size: 3rem;
+      }
+    }
+
+    @media (max-width: 750px) {
+      h1 {
+        font-size: 2.5rem;
+      }
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2.1rem;
+        letter-spacing: 2px; /* slightly tighter so it stays one line */
+      }
+    }
+
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 1.75rem;
+        letter-spacing: 1px;
+      }
+    }
 
   </style>
 </head>
