--- a/OurStory.html
+++ b/OurStory.html
@@ -103,14 +103,14 @@
             <div class="story-text">
                 <p><strong>EXT. SCHOOL PLAYGROUND - DAY. </strong><br><br>A group of 5-year-old boys sneak around a school playground chasing ghosts and looking for monsters. <strong>The Haunted House Club</strong> is their first collective taste of letting their imaginations run wild.</p>
             </div>
-            <img src="kindergarten.jpg" alt="Kindergarten Days" class="story-image"/>
+            <img src="StoryImages/1.png" alt="Kindergarten Days" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
             <div class="story-text">
                 <p><strong>EXT. FIELD - DAY.</strong> <br><br>A group of 8-year-old boys convince one of their dads to film their epic, three-hour-long, zombie/Star Wars/Transformers/Ninjago/superhero battle on his camcorder. They'll watch it back at sleepovers for months and pretend it's a real movie.</p>
             </div>
-            <img src="middle.jpg" alt="Middle School Projects" class="story-image"/>
+            <img src="StoryImages/2.png" alt="Middle School Projects" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
@@ -124,14 +124,14 @@
             <div class="story-text">
                 <p><strong>INT. HALLWAY - DAY. </strong> <br><br>A camera-mounted dolly rolls its way down a hallway as a group of 12-year-old boys shoot one of their first short films. <strong>Bad Cop, Worse Cop</strong> is the first time they start to experiment with fun camera movements and creative shots.</p>
             </div>
-            <img src="club.png" alt="Film Club" class="story-image"/>
+            <img src="StoryImages/4.png" alt="Film Club" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
             <div class="story-text">
                 <p><strong>INT. AUDITORIUM - DAY. </strong> <br><br>As eighth-graders, two of the boys accept the "Best High School Student Film" award at the Lighthouse International Film Festival. The award recognizes their short film <strong>Pick Again</strong>, a meta, genre-switching exploration of cinema. This is the group's first taste of recognition for their work--and it feels incredible.</p>
             </div>
-            <img src="club.png" alt="Film Club" class="story-image"/>
+            <img src="StoryImages/5.png" alt="Film Club" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
@@ -152,21 +152,21 @@
             <div class="story-text">
                 <p><strong>INT. SCIENCE CLASSROOM - DAY. </strong> <br><br>The pandemic forces the group to explore alternative methods for their projects. They stumble upon the wonders of the 3D printer and unlock a whole new world of set and costume design in their Star Wars scene <strong>Waiting for Grogu</strong>.</p>
             </div>
-            <img src="club.png" alt="Film Club" class="story-image"/>
+            <img src="StoryImages/8.png" alt="Film Club" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
             <div class="story-text">
                 <p><strong>EXT. FOREST - NIGHT. </strong> <br><br>Now in college, the group has continued to come up with new and creative ideas to bring their movie-making dreams to life. Shooting on location, in a forest, digging a real ditch, at night, is the latest crazy idea they've cooked up; until it's topped by their homemade practical cannibalism effects.</p>
             </div>
-            <img src="club.png" alt="Film Club" class="story-image"/>
+            <img src="StoryImages/9.png" alt="Film Club" class="story-image"/>
         </div>
 
         <div class="story-block fade-in">
             <div class="story-text">
                 <p><strong>INT. LIVING ROOM - DAY. </strong> <br><br>And now we're all caught up! You're probably sitting in your living room reading through this timeline wondering why you haven't closed the page yet. But just know that you're catching us <strong>early</strong> in our journey. So get on board now while we're just getting started. We've got big things coming down the pipeline and we can't wait to share them with you!</p>
             </div>
-            <img src="club.png" alt="Film Club" class="story-image"/>
+            <img src="StoryImages/10.png" alt="Film Club" class="story-image"/>
         </div>
 
 
