--- a/OurStory.html
+++ b/OurStory.html
@@ -71,8 +71,16 @@
                 flex-direction: column !important;
                 text-align: center;
             }
+
             .story-text {
                 flex: 1 1 100%;
+            }
+
+            .story-image {
+                max-width: 100%; 
+                width: 100%;
+                height: auto;
+                object-fit: cover;
             }
         }
     </style>
@@ -165,7 +173,7 @@
 
         <div class="story-block fade-in">
             <div class="story-text">
-                <p><strong>INT. LIVING ROOM - DAY. </strong> <br><br>And now we're all caught up! You're probably sitting in your living room reading through this timeline wondering why you haven't closed the page yet. But just know that you're catching us <strong>early</strong> in our journey. So get on board now while we're just getting started. We've got big things coming down the pipeline and we can't wait to share them with you!</p>
+                <p><strong>INT. LIVING ROOM - DAY. </strong> <br><br>And now we're all caught up! You're probably sitting in your living room reading through this timeline wondering why you haven't closed the page yet. But just know that you're catching us <strong>early</strong> in our journey. So get on board now while we're just getting started. We've got big things coming down the pipeline, and we can't wait to share them with you!</p>
             </div>
             <img src="StoryImages/10.png" alt="Film Club" class="story-image"/>
         </div>
